--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -5,10 +5,6 @@
   grid-template-rows: min-content 1fr min-content;
   overflow-x: hidden;
   overscroll-behavior-x: none;
-
-  &--locked {
-    overflow: hidden;
-  }
 }
 
 .page__header {
@@ -17,6 +13,8 @@
 
 .page__main {
   width: 100%;
+  height: 1000px;
+  background-color: #00b2ff;
 }
 
 .page__footer {
