--- a/source/sass/service/variables.scss
+++ b/source/sass/service/variables.scss
@@ -7,12 +7,14 @@ $retina-x2: 2dppx;
 $color-primary: #a87b62;
 $color-main-black: #1d1613;
 $color-white: #ffffff;
+$color-white-015: rgba(255, 255, 255, 0.15);
 $color-black: #000000;
 $color-gray: #9b9997;
 $color-text: $color-main-black;
 $background-color-primary: $color-white;
 $background-color-secondary: #f0eae4;
 $border-color: $color-primary;
+$border-color-gray: #f6f5f4;
 
 $font-family-primary: "Cormorant Garamond", "Georgia", serif;
 $font-family-secondary: "Poppins", "Arial", sans-serif;
