--- a/source/sass/service/variables.scss
+++ b/source/sass/service/variables.scss
@@ -16,10 +16,10 @@ $background-color-secondary: #f0eae4;
 $border-color: $color-primary;
 $border-color-gray: #f6f5f4;
 
-$font-family-primary: "Cormorant Garamond", "Georgia", serif;
-$font-family-secondary: "Poppins", "Arial", sans-serif;
+$font-family-primary: "Poppins", "Arial", sans-serif;
+$font-family-secondary: "Cormorant Garamond", "Georgia", serif;
 
 $font-size: 16px;
 $line-height: 21px;
 $color-text: $color-black;
-$font-weight: 400;
+$font-weight: 500;
