--- a/source/sass/blocks/filter.scss
+++ b/source/sass/blocks/filter.scss
@@ -16,14 +16,18 @@
       display: flex;
       position: fixed;
       align-items: flex-start;
+      overflow: scroll;
+      overflow-scrolling: touch;
       top: 0;
       left: 0;
       background-color: $background-color-primary;
+      padding-top: 29px;
       z-index: 5;
     }
 
     @include mobile {
       align-items: center;
+      padding-top: 76px;
     }
   }
 }
@@ -31,11 +35,11 @@
 .filter--active .filter__form {
   @include tablet {
     position: relative;
-    width: 458px;
+    width: 423px;
   }
 
   @include mobile {
-    width: 280px;
+    width: 270px;
   }
 }
 
@@ -43,6 +47,10 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+
+  @include mobile {
+    align-items: center;
+  }
 }
 
 .filter__item {
@@ -57,17 +65,48 @@
   @include tablet {
     border: none;
     border-bottom: 1px solid $color-primary;
+    flex-shrink: 0;
+    padding: 33px 21px 0;
+    min-height: 92px;
+  }
+
+  @include mobile {
+    padding: 24px 21px 0;
+    min-height: 72px;
   }
 
   &--range {
     border-bottom: 1px solid $color-primary;
     margin-bottom: 35px;
+
+    @include tablet {
+      margin-bottom: 40px;
+    }
+
+    @include mobile {
+      margin-bottom: 30px;
+    }
   }
 }
 
 .filter__item--active .filter__inputs {
   display: flex;
-  padding-bottom: 26px;
+}
+
+.filter__item--active .filter__inputs--range {
+  padding-bottom: 35px;
+
+  @include tablet {
+    padding-left: 10px;
+    padding-right: 67px;
+    padding-bottom: 34px;
+  }
+
+  @include mobile {
+    padding-left: 0;
+    padding-right: 0;
+    padding-bottom: 32px;
+  }
 }
 
 .filter__form h3 {
@@ -76,16 +115,35 @@
   font-size: 16px;
   line-height: 21px;
   margin-bottom: 21px;
+
+  @include tablet {
+    font-size: 18px;
+    line-height: 23px;
+    margin-bottom: 24px;
+  }
 }
 
 .filter__item--range h3 {
   margin-bottom: 25px;
+
+  @include tablet {
+    margin-bottom: 34px;
+  }
 }
 
 .filter__inputs {
   display: none;
   width: 100%;
   flex-direction: column;
+  margin-bottom: 26px;
+
+  @include tablet {
+    margin-bottom: 36px;
+  }
+
+  @include mobile {
+    margin-bottom: 27px;
+  }
 
   &--range {
     margin-bottom: 23px;
@@ -95,6 +153,10 @@
 .filter__inputs label {
   position: relative;
   margin-bottom: 9px;
+
+  @include tablet {
+    margin-bottom: 17px;
+  }
 
   &:last-child {
     margin-bottom: 0;
@@ -110,6 +172,12 @@
   font-size: 14px;
   line-height: 18px;
   padding-left: 35px;
+
+  @include tablet {
+    font-size: 16px;
+    line-height: 21px;
+    padding-left: 40px;
+  }
 }
 
 .filter__inputs input {
@@ -122,6 +190,12 @@
   width: 15px;
   height: 15px;
   border: 1px solid $color-primary;
+
+  @include tablet {
+    left: 10px;
+    width: 18px;
+    height: 18px;
+  }
 }
 
 .filter__form input:hover,
@@ -162,4 +236,11 @@
   padding-left: 15px;
   padding-right: 15px;
   margin-bottom: 0;
+}
+
+.filter__inputs--nojs {
+  @include tablet {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
