--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -5,6 +5,10 @@
   grid-template-rows: min-content 1fr min-content;
   overflow-x: hidden;
   overscroll-behavior-x: none;
+
+  &--locked {
+    overflow: hidden;
+  }
 }
 
 .page__header {
