--- a/source/sass/service/variables.scss
+++ b/source/sass/service/variables.scss
@@ -13,6 +13,7 @@ $color-gray: #9b9997;
 $color-text: $color-main-black;
 $background-color-primary: $color-white;
 $background-color-secondary: #f0eae4;
+$background-color-overlay: rgba(29, 22, 19, 0.25);
 $border-color: $color-primary;
 $border-color-gray: #f6f5f4;
 
