--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -70,17 +70,24 @@
 
 .btn__submit {
   position: absolute;
-  top: 7px;
+  top: -2px;
   right: -1px;
-  width: 103px;
+  min-width: 103px;
+  min-height: 36px;
   color: $color-white;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   align-items: center;
 }
 
+.btn__submit span {
+  padding-right: 42px;
+}
+
 .btn__submit svg {
+  position: absolute;
+  top: 12px;
+  right: 0;
   width: 30px;
   height: 11px;
 }
@@ -239,7 +246,7 @@
     display: none;
 
     @include tablet {
-      width: 100%;
+      width: 99%;
       display: block;
       margin-bottom: 50px;
       margin-left: auto;
@@ -247,8 +254,14 @@
     }
 
     @include mobile {
+      width: 98%;
       margin-bottom: 40px;
     }
+  }
+
+  &--login {
+    width: 100%;
+    margin-left: 0;
   }
 }
 
@@ -273,7 +286,7 @@
   &--next {
     width: 67px;
     top: 6px;
-    right: 6px;
+    right: -15px;
 
     @include tablet {
       top: 5px;
@@ -295,16 +308,16 @@
 
 .btn__close {
   display: none;
+  width: 32px;
+  height: 32px;
+  position: absolute;
+  top: -18px;
+  right: -16px;
+  justify-content: center;
+  align-items: center;
 
   @include tablet {
-    position: absolute;
-    top: -18px;
-    right: -16px;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 32px;
-    height: 32px;
     border-radius: 50%;
     background-color: $color-main-black;
     z-index: 10;
@@ -314,6 +327,39 @@
     top: -16px;
     right: -10px;
   }
+
+  &--modal {
+    display: flex;
+    top: -36px;
+    right: -24px;
+    background-color: transparent;
+    z-index: 150;
+
+    @include tablet {
+      top: -35px;
+      right: -18px;
+    }
+
+    @include mobile {
+      top: -32px;
+      right: -9px;
+    }
+  }
+
+  &--login {
+    top: 11px;
+    right: 11px;
+
+    @include tablet {
+      top: 14px;
+      right: 13px;
+    }
+
+    @include mobile {
+      top: 6px;
+      right: 7px;
+    }
+  }
 }
 
 .btn__close svg {
@@ -322,5 +368,93 @@
   @include mobile {
     width: 14px;
     height: 14px;
+  }
+}
+
+.btn__close--modal svg {
+  color: $color-main-black;
+}
+
+.btn__close--login svg {
+  @include tablet {
+    width: 20px;
+    height: 20px;
+  }
+
+  @include mobile {
+    width: 14px;
+    height: 14px;
+  }
+}
+
+.btn__buy {
+  margin-bottom: 17px;
+
+  @include tablet {
+    width: 100%;
+    margin-left: 0;
+    margin-bottom: 15px;
+  }
+
+  @include mobile {
+    margin-bottom: 12px;
+  }
+}
+
+.btn__counter {
+  position: relative;
+  width: 26px;
+  height: 26px;
+  margin-top: -7px;
+  margin-right: -10px;
+  margin-bottom: 3px;
+
+  @include tablet {
+    margin-top: -2px;
+    margin-bottom: -2px;
+  }
+
+  @include mobile {
+    margin-top: -1px;
+    margin-bottom: 8px;
+  }
+
+  &--minus {
+    @include mobile {
+      margin-bottom: 0;
+    }
+  }
+}
+
+.btn__counter svg {
+  position: absolute;
+  top: 7px;
+  left: 6px;
+  color: $color-gray;
+}
+
+.btn__counter--minus svg {
+  top: 12px;
+}
+
+.btn__modal {
+  width: 46.4%;
+
+  @include tablet {
+    margin-left: 0;
+  }
+
+  @include mobile {
+    width: 100%;
+    margin-bottom: 0;
+  }
+
+  &--catalog {
+    background-color: transparent;
+    color: $color-main-black;
+
+    @include mobile {
+      margin-bottom: 20px;
+    }
   }
 }
