--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -113,9 +113,13 @@
   margin-bottom: 9px;
 
   @include mobile {
-    padding-right: 44px;
+    padding-right: 50px;
     margin-bottom: 14px;
   }
+}
+
+.footer__container > h2 > span {
+  letter-spacing: normal;
 }
 
 .footer__container p {
