--- a/source/sass/blocks/filter.scss
+++ b/source/sass/blocks/filter.scss
@@ -53,6 +53,13 @@
   }
 }
 
+.filter__list {
+  @include style-reset;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 .filter__item {
   position: relative;
   width: 100%;
@@ -75,7 +82,7 @@
     min-height: 72px;
   }
 
-  &--range {
+  &:last-child {
     border-bottom: 1px solid $color-primary;
     margin-bottom: 35px;
 
@@ -157,11 +164,12 @@
   @include tablet {
     margin-bottom: 17px;
   }
-
-  &:last-child {
-    margin-bottom: 0;
-  }
 }
+
+.filter__inputs label:last-child {
+  margin-bottom: 0;
+}
+
 
 .filter__inputs--range > label {
   display: none;
