Добавляет правки после проверки

--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -93,6 +93,7 @@
 
 .products__item span {
   display: inline-block;
+  vertical-align: middle;
   text-align: center;
   font-weight: 700;
   font-size: 14px;
