--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -7,7 +7,6 @@
   background-color: $color-white;
   margin-left: auto;
   margin-right: auto;
-  overflow: scroll;
   z-index: 100;
 
   &--add {
@@ -29,6 +28,7 @@
     display: none;
     width: 100%;
     height: 100%;
+    overflow-y: scroll;
   }
 
   &--active {
