--- a/source/sass/blocks/overlay.scss
+++ b/source/sass/blocks/overlay.scss
@@ -5,7 +5,7 @@
   height: 100%;
   display: none;
   flex-direction: column;
-  overflow: scroll;
+  overflow-y: scroll;
   overflow-scrolling: touch;
   background-color: $background-color-overlay;
   z-index: 50;
