--- a/source/sass/blocks/blog.scss
+++ b/source/sass/blocks/blog.scss
@@ -1,8 +1,7 @@
 .blog {
   display: grid;
-  grid-template-areas: "pic-left big" "pic-right big";
-  grid-template-columns: (minmax(450px, 570px) minmax(400px, 570px));
-  grid-auto-rows: 300px;
+  grid-template-columns: repeat(2,1fr);
+  grid-template-rows: repeat(2,1fr);
   align-items: start;
   gap: 30px;
   margin-left: auto;
@@ -31,20 +30,15 @@
     margin-bottom: 40px;
   }
 
-  &--pic-left {
-    grid-area: pic-left;
-  }
-
   &--pic-right {
-    grid-area: pic-right;
-
     @include mobile {
       flex-direction: column-reverse;
     }
   }
 
   &--big {
-    grid-area: big;
+    grid-row: 1/-1;
+    grid-column: 2/-2;
 
     @include mobile {
       margin-bottom: 0;
@@ -58,11 +52,10 @@
 
 .blog__item img {
   object-fit: cover;
-  height: 300px;
+  height: 100%;
 
   @include tablet {
     width: 100%;
-    height: 100%;
   }
 }
 
@@ -83,14 +76,12 @@
   flex-shrink: 0;
   align-items: center;
   background-color: $background-color-secondary;
-  padding: 67px 56px 1px;
+  padding: 67px 56px 20px;
 
   @include tablet {
     width: 50%;
     justify-content: center;
-    padding-top: 0;
-    padding-left: 84px;
-    padding-right: 84px;
+    padding: 0 84px;
   }
 
   @include mobile {
@@ -102,6 +93,7 @@
 
   &--big {
     position: absolute;
+    max-height: 630px;
     bottom: 0;
     right: 0;
 
@@ -127,6 +119,10 @@
   line-height: 34px;
   text-align: center;
   margin-bottom: 37px;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .blog__container a {
