--- a/source/sass/blocks/channel.scss
+++ b/source/sass/blocks/channel.scss
@@ -1,9 +1,12 @@
 .channel {
   @include list-reset;
   width: 100%;
-  max-width: 1250px;
   display: flex;
   justify-content: space-between;
+
+  @media (min-width: 1200px) {
+    max-width: 1170px;
+  }
 
   @include tablet {
     width: 98%;
@@ -24,7 +27,7 @@
 
   &--first {
     width: 19.7%;
-    margin-right: 26px;
+    margin-right: 30px;
 
     @include tablet {
       width: 19.5%;
@@ -40,7 +43,7 @@
 
   &--second {
     width: 35%;
-    margin-right: 17px;
+    margin-right: 20px;
 
     @include tablet {
       width: 34%;
@@ -55,7 +58,7 @@
 
   &--third {
     width: 20%;
-    margin-right: 8px;
+    margin-right: 12px;
 
     @include tablet {
       width: 19.1%;
