--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -1,5 +1,16 @@
 .logo {
   line-height: 0;
+
+  &--modal {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+    z-index: 100;
+
+    @include mobile {
+      margin-bottom: 0;
+    }
+  }
 }
 
 .logo svg:hover,
